--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="txt_bancodedados">Banco de dados</string>
     <string name="txt_desenho">Desenho</string>
     <string name="txt_sensores">Sensores</string>
+    <string name="txt_mapas">Mapas</string>
 </resources>
